fixed title text alignment

--- a/css/index.css
+++ b/css/index.css
@@ -207,7 +207,7 @@ textarea {
 }
 
 .main-title {
-  margin: 50px 200px;
+  margin: 50px auto;
   text-align: center;
 }
 
