--- a/sass/utils/_App.scss
+++ b/sass/utils/_App.scss
@@ -54,6 +54,6 @@ textarea {
 }
 
 .main-title {
-    margin: 50px 200px;
+    margin: 50px auto;
     text-align: center;
 }
